put quotes in correct spots, reduce spacing

--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ blockquote {
   font-style: italic;
   color: #111;
   max-width: 700px;
-  margin: 4rem auto;
+  margin: 0.5rem auto;
   padding-left: 2rem;
   position: relative;
   line-height: 1.6;
@@ -123,8 +123,8 @@ blockquote::after {
 }
 /* adding more spacing */
 .section-article {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 .section-article p {
   font-size: 1.15rem;
